NumberHelper: code warnings. NumberFormatter -> Kotlin.